# Data-Quality

./: 404.html  README.md  index.html  my_duckdb.db  pyproject.toml  schema_crm.py
app/: etl.py  funcao.py  schema email.py  schema.py
docs/: index.md
search/: search_index.json
tests/: test_func_etl.py
