[tool.poetry]
name = "data-quality"
version = "0.1.0"
description = ""
authors = ["Mateus Kasuya <mateusvbkasuya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
mkdocs = "^1.6.0"
mkdocs-mermaid2-plugin = {extras = ["test"], version = "^1.1.1"}
mkdocs-material = "^9.5.24"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
